IGDD-2267 DEX Send Failures Fix (#59)
* Updates to core to report more about exceptions in logs.

* Add debugging support for errors.

* Added support for reporting path being accessed.

* Fixed extra parameter in String.format.

* Updating calls to support reporting of URL Path on HTTP Errors.

* IGDD-2052 jwtSharedSecret should be treated as Base64 Encoded data

Updated JwtSharedSecretPrincipalProvider to decode secret as Base64 data

* Enable SSL Output Reporting by configuration for diagnostics.

* Add path parameter to HubClientFault for improved HTTP error reporting